--- a/portfolio.html
+++ b/portfolio.html
@@ -241,11 +241,12 @@
   </main>
   <!-- Футер сайта -->
   <footer class="footer">
-    <ul class="container">
+    <ul class="footer-container container">
       <li class="footer-flex-block">
-        <a class="logo link" href="./index.html"><span class="logo-text">Web</span>Studio</a>
+        <a class="logo link .logo-margin" href="./index.html"><span class="logo-text">Web</span>Studio</a>
         <address id="address" class="address">
-          <a class="text emphasizing" target="_blank" href="https://goo.gl/maps/QLkYeELodZ8mEa568">г. Киев, пр-т Леси Украинки,
+          <a class="text emphasizing" target="_blank" href="https://goo.gl/maps/QLkYeELodZ8mEa568">г. Киев, пр-т Леси
+            Украинки,
             26</a>
           <ul class="list">
             <li>
@@ -257,8 +258,8 @@
           </ul>
         </address>
       </li>
-
-      <div class="info-link">
+  
+      <li class="info-link">
         <strong class="join">присоединяйтесь</strong>
         <ul class="social-links">
           <li class="footer-social">
@@ -286,7 +287,21 @@
             </a>
           </li>
         </ul>
-      </div>
+      </li>
+  
+      <li class="footer-subtitle">
+        <p class="join subtitle-text">Подпишитесь на рассылку</p>
+        <form class="subscribe-form" autocomplete="off">
+          <input class="subscribe-input" type="email" name="subscribe" placeholder="E-mail" pattern=".+@globex\.com"
+            size="30" required />
+          <button class="button subscribe-button" type="submit">
+            <span class="subscribe-button-text">Подписаться</span>
+            <svg class="subscribe-svg" width="24" height="24">
+              <use class="subscribe-use" href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
+      </li>
     </ul>
   </footer>
   <script src="./js/modal.js"></script>
