--- a/index.html
+++ b/index.html
@@ -410,25 +410,45 @@
 
         <label class="register-form-user">
           <span class="register-position">Имя</span>
-          <input class="register-position-input" type="text" name="user-name">
+          <input class="register-position-input" type="text" name="user-name" minlength="3" required>
           <svg class="register-btn-person">
             <use class="modal-btn-use" href="./images/icons.svg#icon-man"></use>
           </svg>
+          <!--! --------------------------------- -->
+          <span class="register-eror-text">Минимальная длина 3-символа</span>
+          <svg class="register-btn-eror-no-eror">
+            <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
+            <use class="modal-btn-no-eror" href="./img/icons.svg#icon-no-eror"></use>
+          </svg>
+          <!--! --------------------------------- -->
         </label>
         <label class="register-form-user">
           <span class="register-position">Телефон</span>
-          <input class="register-position-input" type="tel" name="user-name-tel">
+          <input class="register-position-input" type="tel" name="user-name-tel" minlength="3" required>
           <svg class="register-btn-person">
             <use class="modal-btn-use" href="./images/icons.svg#icon-phone-2"></use>
           </svg>
+          <!--! --------------------------------- -->
+          <span class="register-eror-text">Минимальная длина 3-символа</span>
+          <svg class="register-btn-eror-no-eror">
+            <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
+            <use class="modal-btn-no-eror" href="./img/icons.svg#icon-no-eror"></use>
+          </svg>
+          <!--! --------------------------------- -->
         </label>
         <label class="register-form-user">
           <span class="register-position">Почта</span>
-          <input class="register-position-input" type="email" name="user-name-email" pattern=".+@globex\.com" size="30"
-            required>
+          <input class="register-position-input" type="email" name="user-name-email" minlength="3" required>
           <svg class="register-btn-person">
             <use class="modal-btn-use" href="./images/icons.svg#icon-e-mail"></use>
           </svg>
+<!-- 
+          <span class="register-eror-text">Минимальная длина 3-символа</span>
+          <svg class="register-btn-eror-no-eror">
+            <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
+            <use class="modal-btn-no-eror" href="./img/icons.svg#icon-no-eror"></use>
+          </svg>
+           -->
         </label>
         <label class="register-form-user coments">
           <span class="register-position">Комментарий</span>
