--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
         <label class="register-form-user">
           <span class="register-position">Имя</span>
           <input class="register-position-input" type="text" name="user-name" minlength="3" required>
-          <svg class="register-btn-person">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-man"></use>
-          </svg>
+            <svg class="register-btn-person">
+              <use class="modal-btn-use" width="12px" hidden="12px" href="./images/icons.svg#icon-man"></use>
+            </svg>
           <!--! --------------------------------- -->
           <span class="register-eror-text">Минимальная длина 3-символа</span>
           <svg class="register-btn-eror-no-eror">
@@ -426,7 +426,7 @@
           <span class="register-position">Телефон</span>
           <input class="register-position-input" type="tel" name="user-name-tel" minlength="3" required>
           <svg class="register-btn-person">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-phone-2"></use>
+            <use class="modal-btn-use" width="13px" hidden="13px" href="./images/icons.svg#icon-phone-2"></use>
           </svg>
           <!--! --------------------------------- -->
           <span class="register-eror-text">Минимальная длина 3-символа</span>
@@ -440,15 +440,15 @@
           <span class="register-position">Почта</span>
           <input class="register-position-input" type="email" name="user-name-email" minlength="3" required>
           <svg class="register-btn-person">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-e-mail"></use>
+            <use class="modal-btn-use" width="15px" hidden="12px" href="./images/icons.svg#icon-e-mail"></use>
           </svg>
-<!-- 
+          <!--! --------------------------------- -->
           <span class="register-eror-text">Минимальная длина 3-символа</span>
           <svg class="register-btn-eror-no-eror">
             <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
             <use class="modal-btn-no-eror" href="./img/icons.svg#icon-no-eror"></use>
           </svg>
-           -->
+          <!--! --------------------------------- -->
         </label>
         <label class="register-form-user coments">
           <span class="register-position">Комментарий</span>
