--- a/index.html
+++ b/index.html
@@ -377,9 +377,8 @@
 
       <li class="footer-subtitle">
         <p class="join subtitle-text">Подпишитесь на рассылку</p>
-        <form class="subscribe-form" autocomplete="off">
-          <input class="subscribe-input" type="email" name="subscribe" placeholder="E-mail" pattern=".+@globex\.com"
-            size="30" required />
+        <form class="subscribe-form">
+          <input class="subscribe-input" type="email" name="subscribe" autocomplete="on" placeholder="E-mail" pattern=".+@globex\.com" size="30" required />
           <button class="button subscribe-button" type="submit">
             <span class="subscribe-button-text">Подписаться</span>
             <svg class="subscribe-svg" width="24" height="24">
@@ -411,8 +410,8 @@
         <label class="register-form-user">
           <span class="register-position">Имя</span>
           <input class="register-position-input" type="text" name="user-name" minlength="3" required>
-          <svg class="register-btn-person">
-            <use class="modal-btn-use" width="12px" height="12px" href="./images/icons.svg#icon-man"></use>
+          <svg class="register-btn-person" width="18" height="18px">
+            <use class="modal-btn-use" href="./images/icons.svg#icon-man"></use>
           </svg>
           <span class="register-eror-text">Минимальная длина 3-символа</span>
           <svg class="register-btn-eror-no-eror">
@@ -423,8 +422,8 @@
         <label class="register-form-user">
           <span class="register-position">Телефон</span>
           <input class="register-position-input" id="user-name-tel" type="tel" name="user-name-tel" required>
-          <svg class="register-btn-person">
-            <use class="modal-btn-use" width="13px" height="13px" href="./images/icons.svg#icon-phone-2"></use>
+          <svg class="register-btn-person" width="18px" height="18px">
+            <use class="modal-btn-use" href="./images/icons.svg#icon-phone-2"></use>
           </svg>
           <svg class="register-btn-eror-no-eror">
             <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
@@ -433,9 +432,9 @@
         </label>
         <label class="register-form-user">
           <span class="register-position">Почта</span>
-          <input class="register-position-input" type="email" name="user-name-email" minlength="3" required>
-          <svg class="register-btn-person">
-            <use class="modal-btn-use" width="15px" height="12px" href="./images/icons.svg#icon-e-mail"></use>
+          <input class="register-position-input" autocomplete="on" type="email" name="user-name-email" minlength="3" required>
+          <svg class="register-btn-person" width="18px" height="18px">
+            <use class="modal-btn-use" href="./images/icons.svg#icon-e-mail"></use>
           </svg>
         </label>
         <label class="register-form-user coments">
