--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
       <li class="footer-subtitle">
         <p class="join subtitle-text">Подпишитесь на рассылку</p>
         <form class="subscribe-form">
-          <input class="subscribe-input" type="email" name="subscribe" autocomplete="on" placeholder="E-mail" pattern=".+@globex\.com" size="30" required />
+          <input class="subscribe-input" type="email" name="subscribe" autocomplete="on" placeholder="E-mail"
+            pattern=".+@globex\.com" size="30" required />
           <button class="button subscribe-button" type="submit">
             <span class="subscribe-button-text">Подписаться</span>
             <svg class="subscribe-svg" width="24" height="24">
@@ -410,9 +411,11 @@
         <label class="register-form-user">
           <span class="register-position">Имя</span>
           <input class="register-position-input" type="text" name="user-name" minlength="3" required>
-          <svg class="register-btn-person" width="18" height="18px">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-man"></use>
-          </svg>
+          <span class="register-btn-person">
+            <svg width="12px" height="12px">
+              <use href="./images/icons.svg#icon-man"></use>
+            </svg>
+          </span>
           <span class="register-eror-text">Минимальная длина 3-символа</span>
           <svg class="register-btn-eror-no-eror">
             <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
@@ -422,9 +425,11 @@
         <label class="register-form-user">
           <span class="register-position">Телефон</span>
           <input class="register-position-input" id="user-name-tel" type="tel" name="user-name-tel" required>
-          <svg class="register-btn-person" width="18px" height="18px">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-phone-2"></use>
-          </svg>
+          <span class="register-btn-person">
+            <svg width="13px" height="13px">
+              <use class="modal-btn-use phone-icon" href="./images/icons.svg#icon-phone-2"></use>
+            </svg>
+          </span>
           <svg class="register-btn-eror-no-eror">
             <use class="modal-btn-eror" href="./img/icons.svg#icon-eror"></use>
             <use class="modal-btn-no-eror" href="./img/icons.svg#icon-no-eror"></use>
@@ -432,10 +437,13 @@
         </label>
         <label class="register-form-user">
           <span class="register-position">Почта</span>
-          <input class="register-position-input" autocomplete="on" type="email" name="user-name-email" minlength="3" required>
-          <svg class="register-btn-person" width="18px" height="18px">
-            <use class="modal-btn-use" href="./images/icons.svg#icon-e-mail"></use>
-          </svg>
+          <input class="register-position-input" autocomplete="on" type="email" name="user-name-email" minlength="3"
+            required>
+          <span class="register-btn-person">
+            <svg width="15px" height="12px">
+              <use class="modal-btn-use envelope-icon" href="./images/icons.svg#icon-e-mail"></use>
+            </svg>
+          </span>
         </label>
         <label class="register-form-user coments">
           <span class="register-position">Комментарий</span>
